<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".light_meter.LightMeterActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/initial_value"
        android:id="@+id/lux"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:textSize="120sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/initial_value"
        android:id="@+id/maxLux"
        android:layout_centerVertical="true"
        android:layout_toRightOf="@+id/max"
        android:layout_toEndOf="@+id/max"
        android:layout_marginLeft="3dp"
        android:layout_marginStart="3dp"
        android:textSize="30sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/initial_value"
        android:id="@+id/minLux"
        android:layout_marginTop="36dp"
        android:textSize="30sp"
        android:layout_below="@+id/maxLux"
        android:layout_alignLeft="@+id/maxLux"
        android:layout_alignStart="@+id/maxLux" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/initial_value"
        android:id="@+id/avgLux"
        android:layout_marginTop="36dp"
        android:textSize="30sp"
        android:layout_below="@+id/minLux"
        android:layout_alignLeft="@+id/maxLux"
        android:layout_alignStart="@+id/maxLux" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/max_lux"
        android:id="@+id/max"
        android:layout_above="@+id/minLux"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="50dp"
        android:layout_marginStart="50dp"
        android:textSize="30sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/min_lux"
        android:id="@+id/min"
        android:textSize="30sp"
        android:layout_alignBaseline="@+id/minLux"
        android:layout_alignBottom="@+id/minLux"
        android:layout_toLeftOf="@+id/maxLux"
        android:layout_toStartOf="@+id/maxLux" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/avg_lux"
        android:id="@+id/avg"
        android:textSize="30sp"
        android:layout_alignTop="@+id/avgLux"
        android:layout_alignRight="@+id/min"
        android:layout_alignEnd="@+id/min" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/light_meter_unit"
        android:id="@+id/luxUnit"
        android:layout_alignBottom="@+id/lux"
        android:layout_toRightOf="@+id/lux"
        android:layout_toEndOf="@+id/lux"
        android:layout_marginBottom="25dp"
        android:layout_marginLeft="5dp"
        android:layout_marginStart="5dp"
        android:textStyle="italic"
        android:textSize="25sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/light_meter_unit"
        android:id="@+id/maxLuxUnit"
        android:layout_alignBottom="@+id/maxLux"
        android:layout_toRightOf="@+id/maxLux"
        android:layout_toEndOf="@+id/maxLux"
        android:textStyle="italic"
        android:layout_marginLeft="5dp"
        android:layout_marginStart="5dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/light_meter_unit"
        android:id="@+id/minLuxUnit"
        android:layout_alignBottom="@+id/minLux"
        android:layout_toRightOf="@+id/minLux"
        android:layout_toEndOf="@+id/minLux"
        android:textStyle="italic"
        android:layout_marginLeft="5dp"
        android:layout_marginStart="5dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/light_meter_unit"
        android:id="@+id/avgLuxUnit"
        android:layout_alignBottom="@+id/avgLux"
        android:layout_toRightOf="@+id/avgLux"
        android:layout_toEndOf="@+id/avgLux"
        android:textStyle="italic"
        android:layout_marginLeft="5dp"
        android:layout_marginStart="5dp"/>

</RelativeLayout>
